just checking if git is working properly

--- a/pages/about/about.html
+++ b/pages/about/about.html
@@ -15,15 +15,15 @@
   <div class="container">
     <div id="header" include-html="/sections/header/header.html"></div>
     <main>
-      <h1>Hello There</h1>
-      <br /><br />
-      <p>
-        I'm Utku Barış Selçuk. I will soon tidy up this site. Believe me, I
-        have no idea what this site is, which I want to use as a blog and
-        personal website. If you know me and somehow came across this site, I
-        don't know what you want to find, but you won't find it here right
-        now. Well, see you then.
-      </p>
+      <h1>About</h1>
+      <br />
+      <br />
+      <ul>
+        <li>
+          June 16, 2024
+          <a href="/pages/about/about_this_website.html">About This Website</a>
+        </li>
+      </ul>
       <br />
     </main>
     <div id="footer" include-html="/sections/footer/footer.html"></div>
