--- a/pages/cv/cv.html
+++ b/pages/cv/cv.html
@@ -1,25 +1,69 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"
-    />
-    <title>ubselcuk cv</title>
-    <link rel="stylesheet" type="text/css" href="/assets/dark.css" />
-  </head>
-  <body>
-    <div class="container">
-      <div id="header" include-html="/sections/header/header.html"></div>
-      <main>
-        <h1>CV</h1>
-        <br>
-        <a href="/documents/oh.txt">Don't click!</a>
-      </main>
-      <div id="footer" include-html="/sections/footer/footer.html"></div>
-    </div>
-    <script src="/javascript/index.js"></script>
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+  <title>Utku Barış Selçuk</title>
+  <link rel="stylesheet" type="text/css" href="/assets/dark.css" />
+  <link rel="icon" type="image/x-icon" href="/documents/favicon.ico" />
+  <meta name="description" content="It's dangerous to go alone! Take this." />
+</head>
+
+<body>
+  <div class="container">
+    <div id="header" include-html="/sections/header/header.html"></div>
+    <main>
+      <h1>Curriculum Vitae</h1>
+
+      <br />
+      <h2>About Me</h2>
+      <hr />
+      <br />
+      <p>Recommended by 4 out of 5 people.</p>
+      <br />
+      <h2>Experience</h2>
+      <hr />
+      <br />
+      <p>
+        <em><strong>Junior Software Developer</strong>, Oct 2022 – Current</em>
+        <br />
+        <em><strong>Intern</strong>, Jun 2022 – Oct 2022</em>
+      </p>
+      <br />
+      <ul>
+        <li>Build apps using flutter.</li>
+      </ul>
+      <br />
+      <!-- <h2>Technical Strengths</h2>
+      <hr />
+      <br />
+      <p>
+        <small><em>Everything listed here is in order of proficiency</em></small>
+      </p>
+      <br />
+      <p><strong>Languages:</strong></p>
+      <br /> 
+
+      <ul>
+        <li>Dart</li>
+      </ul>
+      
+      <br />
+      -->
+      <h2>Achievements</h2>
+      <hr />
+      <br />
+      <ul>
+        <li>My fater once said to me I'm proud of you.</li>
+        <li>My cat loves me.</li>
+      </ul>
+      <br />
+    </main>
+    <div id="footer" include-html="/sections/footer/footer.html"></div>
+  </div>
+  <script src="/javascript/index.js"></script>
+</body>
+
 </html>
