--- a/sections/footer/footer.html
+++ b/sections/footer/footer.html
@@ -1,4 +1,5 @@
 <footer>
-  <a href="https://tr.linkedin.com/in/ubselcuk" target="_blank">linkedin</a>
-  | <a target="_blank" href="https://media.ubselcuk.com/rickroll.mp4">onlyfans</a>
+  <a href="mailto:ubselcuk@gmail.com" target="_blank">email</a>
+  | <a target="_blank" href="https://www.instagram.com/unkeady/">instagram</a>
+  | <a href="https://tr.linkedin.com/in/ubselcuk" target="_blank">linkedin</a>
 </footer>
