--- a/sections/header/header.html
+++ b/sections/header/header.html
@@ -2,7 +2,7 @@
     <div class="menu">
       <ul>
         <li><a href="/index.html">/</a></li>
-        <li><a href="/pages/blog/blog.html">blog</a></li>
+        <li><a href="/pages/about/about.html">about</a></li>
         <li><a href="/pages/cv/cv.html">cv</a></li>
       </ul>
     </div>
