--- a/index.html
+++ b/index.html
@@ -15,14 +15,19 @@
   <div class="container">
     <div id="header" include-html="/sections/header/header.html"></div>
     <main>
-      <h1>Hello There</h1>
+      <h1>Hello, I’m Utku Barış Selçuk 👋</h1>
       <br /><br />
       <p>
-        I'm Utku Barış Selçuk. I will soon tidy up this site. Believe me, I
-        have no idea what this site is, which I want to use as a blog and
-        personal website. If you know me and somehow came across this site, I
-        don't know what you want to find, but you won't find it here right
-        now. Well, see you then.
+        I'm a computer engineer with a focus on mobile app development. With over two years of
+        professional experience, I am dedicated to continually improving and refining my skills. Outside of work, I find
+        joy in simple pleasures such as savoring a well-made cup of coffee. I approach each project with a dedication to
+        finding effective solutions through problem-solving and aim to contribute innovative ideas.
+      </p>
+      <br />
+      <p>
+        I don't know what you want to find, but you won't find it here right
+        now. Let’s be honest. I have no clue what this website will become.
+        Right now, it’s a blank canvas, waiting for inspiration to strike.
       </p>
       <br />
     </main>
