--- a/sections/header/header.html
+++ b/sections/header/header.html
@@ -3,6 +3,7 @@
       <ul>
         <li><a href="/index.html">/</a></li>
         <li><a href="/pages/about/about.html">about</a></li>
+        <!-- <li><a href="/pages/login/login.html">login</a></li> -->
         <li><a href="/pages/cv/cv.html">cv</a></li>
       </ul>
     </div>
