--- a/pages/about/about.html
+++ b/pages/about/about.html
@@ -20,8 +20,12 @@
       <br />
       <ul>
         <li>
-          June 16, 2024
+          16-06-2024
           <a href="/pages/about/about_this_website.html">About This Website</a>
+        </li>
+        <li>
+          10-07-2024
+          <a href="/pages/about/ciwiq.html">Meow?</a>
         </li>
       </ul>
       <br />
