--- a/pages/about/ciwiq.html
+++ b/pages/about/ciwiq.html
@@ -29,12 +29,13 @@
                     <img data-src="https://media.ubselcuk.com/ciwiq.jpeg" alt="Ciwiq 1" loading="lazy">
                     <div class="loader"></div>
                 </div>
-
-                <br />
+            </div>
+            <br />
         </main>
         <div id="footer" include-html="/sections/footer/footer.html"></div>
     </div>
     <script src="/javascript/index.js"></script>
     <script src="/javascript/lazyload.js"></script>
 </body>
+
 </html>
