--- a/pages/about/ciwiq.html
+++ b/pages/about/ciwiq.html
@@ -24,30 +24,27 @@
                 our household, the feline embodiment of grace and nobility — Queen Ciwiq!
             </p>
             <br />
+
+
             <div class="gallery">
-                <div class="image-container">
-                    <img data-src="https://media.ubselcuk.com/ciwiq.jpeg" alt="Ciwiq 1" loading="lazy">
-                    <div class="loader"></div>
-                </div>
-                <div class="image-container">
-                    <img data-src="https://media.ubselcuk.com/ciwiq.jpeg" alt="Ciwiq 1" loading="lazy">
-                    <div class="loader"></div>
-                </div>
-                <div class="image-container">
-                    <img data-src="https://media.ubselcuk.com/ciwiq.jpeg" alt="Ciwiq 1" loading="lazy">
-                    <div class="loader"></div>
-                </div>
-                <div class="image-container">
-                    <img data-src="https://media.ubselcuk.com/ciwiq.jpeg" alt="Ciwiq 1" loading="lazy">
-                    <div class="loader"></div>
-                </div>
+                <img class="four-grid-cells" src="https://media.ubselcuk.com/ciwiq.jpeg""
+                alt=" Northern Winter Sky Image" /> <img class="four-grid-cells"
+                    src="https://media.ubselcuk.com/ciwiq.jpeg""
+                alt=" Northern Winter Sky Image" /> <img class="four-grid-cells"
+                    src="https://media.ubselcuk.com/ciwiq.jpeg""
+                alt=" Northern Winter Sky Image" /> <img class="four-grid-cells"
+                    src="https://media.ubselcuk.com/ciwiq.jpeg""
+                alt=" Northern Winter Sky Image" />
+
             </div>
+
+
             <br />
         </main>
         <div id="footer" include-html="/sections/footer/footer.html"></div>
     </div>
     <script src="/javascript/index.js"></script>
-    <script src="/javascript/lazyload.js"></script>    
+    <!-- <script src="/javascript/lazyload.js"></script>     -->
 </body>
 
 </html>
