--- a/pages/about/ciwiq.html
+++ b/pages/about/ciwiq.html
@@ -27,14 +27,9 @@
 
 
             <div class="gallery">
-                <img class="four-grid-cells" src="https://media.ubselcuk.com/ciwiq.jpeg""
-                alt=" Northern Winter Sky Image" /> <img class="four-grid-cells"
-                    src="https://media.ubselcuk.com/ciwiq.jpeg""
-                alt=" Northern Winter Sky Image" /> <img class="four-grid-cells"
-                    src="https://media.ubselcuk.com/ciwiq.jpeg""
-                alt=" Northern Winter Sky Image" /> <img class="four-grid-cells"
-                    src="https://media.ubselcuk.com/ciwiq.jpeg""
-                alt=" Northern Winter Sky Image" />
+                <img src="https://media.ubselcuk.com/ciwiq.jpeg" alt=" Northern Winter Sky Image" />
+                <img src="https://media.ubselcuk.com/ciwiq.jpeg" alt=" Northern Winter Sky Image" />
+                <img src="https://media.ubselcuk.com/ciwiq.jpeg" alt=" Northern Winter Sky Image" />
 
             </div>
 
