--- a/pages/about/ciwiq.html
+++ b/pages/about/ciwiq.html
@@ -27,10 +27,18 @@
 
 
             <div class="gallery">
-                <img src="https://media.ubselcuk.com/ciwiq.jpeg" alt=" Northern Winter Sky Image" />
-                <img src="https://media.ubselcuk.com/ciwiq.jpeg" alt=" Northern Winter Sky Image" />
-                <img src="https://media.ubselcuk.com/ciwiq.jpeg" alt=" Northern Winter Sky Image" />
-
+                <div class="gallery-item">
+                    <img src="https://media.ubselcuk.com/ciwiq.jpeg" alt="Image 1">
+                </div>
+                <div class="gallery-item">
+                    <img src="https://media.ubselcuk.com/ciwiq.jpeg" alt="Image 1">
+                </div><div class="gallery-item">
+                    <img src="https://media.ubselcuk.com/ciwiq.jpeg" alt="Image 1">
+                  </div><div class="gallery-item">
+                    <img src="https://media.ubselcuk.com/ciwiq.jpeg" alt="Image 1">
+                  </div><div class="gallery-item">
+                    <img src="https://media.ubselcuk.com/ciwiq.jpeg" alt="Image 1">
+                  </div>
             </div>
 
 
