--- a/pages/about/ciwiq.html
+++ b/pages/about/ciwiq.html
@@ -26,20 +26,7 @@
             <br />
 
 
-            <div class="gallery">
-                <div class="gallery-item">
-                    <img src="https://media.ubselcuk.com/ciwiq.jpeg" alt="Image 1">
-                </div>
-                <div class="gallery-item">
-                    <img src="https://media.ubselcuk.com/ciwiq.jpeg" alt="Image 1">
-                </div><div class="gallery-item">
-                    <img src="https://media.ubselcuk.com/ciwiq.jpeg" alt="Image 1">
-                  </div><div class="gallery-item">
-                    <img src="https://media.ubselcuk.com/ciwiq.jpeg" alt="Image 1">
-                  </div><div class="gallery-item">
-                    <img src="https://media.ubselcuk.com/ciwiq.jpeg" alt="Image 1">
-                  </div>
-            </div>
+            <img class="image" src="https://media.ubselcuk.com/ciwiq.jpeg" alt="Image 1">
 
 
             <br />
