--- a/pages/about/ciwiq.html
+++ b/pages/about/ciwiq.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <title>Utku Barış Selçuk</title>
-    <link rel="stylesheet" type="text/css" href="/assets/dark.css" />
+    <link rel="stylesheet" type="text/css" href="/assets/darky.css" />
     <link rel="icon" type="image/x-icon" href="/documents/favicon.ico">
     <meta name="description" content="It's dangerous to go alone! Take this.">
 </head>
