--- a/pages/about/ciwiq.html
+++ b/pages/about/ciwiq.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <title>Utku Barış Selçuk</title>
-    <link rel="stylesheet" type="text/css" href="/assets/darky.css" />
+    <link rel="stylesheet" type="text/css" href="/assets/dark.css" />
     <link rel="icon" type="image/x-icon" href="/documents/favicon.ico">
     <meta name="description" content="It's dangerous to go alone! Take this.">
 </head>
@@ -26,7 +26,24 @@
             <br />
 
 
-            <img class="image" src="https://media.ubselcuk.com/ciwiq.jpeg" alt="Image 1">
+            <div class="gallery">
+                <div class="image-container">
+                    <img data-src="https://media.ubselcuk.com/ciwiq.jpeg" alt="Ciwiq 1" loading="lazy">
+                    <div class="loader"></div>
+                </div>
+                <div class="image-container">
+                    <img data-src="https://media.ubselcuk.com/ciwiq.jpeg" alt="Ciwiq 1" loading="lazy">
+                    <div class="loader"></div>
+                </div>
+                <div class="image-container">
+                    <img data-src="https://media.ubselcuk.com/ciwiq.jpeg" alt="Ciwiq 1" loading="lazy">
+                    <div class="loader"></div>
+                </div>
+                <div class="image-container">
+                    <img data-src="https://media.ubselcuk.com/ciwiq.jpeg" alt="Ciwiq 1" loading="lazy">
+                    <div class="loader"></div>
+                </div>
+            </div>
 
 
             <br />
