--- a/pages/about/ciwiq.html
+++ b/pages/about/ciwiq.html
@@ -51,7 +51,7 @@
         <div id="footer" include-html="/sections/footer/footer.html"></div>
     </div>
     <script src="/javascript/index.js"></script>
-    <!-- <script src="/javascript/lazyload.js"></script>     -->
+    <script src="/javascript/lazyload.js"></script>    
 </body>
 
 </html>
